多个css文件合并时排除并重用已经合并过的图片

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ intelligent-spriter.sublime-project
 
 intelligent-spriter.sublime-workspace
 node_modules/*
+ispriter.sublime-project
+
+ispriter.sublime-workspace
+
+test/npm-debug.log
