--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "azrael <azrael@imatlas.com> (http://imatlas.com/about)",
   "name": "ispriter",
   "description": "an intelligent merge sprite tool",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "homepage": "http://imatlas.com/posts/intelligent-merge-css-sprite/",
   "repository": {
     "type": "git",
@@ -12,7 +12,10 @@
   "engines": {
     "node": "*"
   },
-  "dependencies": {},
+  "dependencies": {
+    "cssom": "*",
+    "canvas": "*"
+  },
   "devDependencies": {},
   "optionalDependencies": {}
 }
