--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
 
 .DS_Store
 
-
-
-intelligent-spriter.sublime-project
-
-intelligent-spriter.sublime-workspace
-node_modules/*
+test/output
 ispriter.sublime-project
 
 ispriter.sublime-workspace
