增加图片间隔配置

--- a/src/config.example.json
+++ b/src/config.example.json
@@ -6,5 +6,6 @@
     "cssOutput": "./../test/output/css/",
     "imageOutput": "../images/",
     "outputPrefix": "sprite_",
+    "imagePadding": 5,
     "outputFormat": "png"
 }
