提供将所有图片合并为一张, 同时所有css文件合并为一个文件的功能
Signed-off-by: azrael <azrael@imatlas.com>

--- a/src/config.example.json
+++ b/src/config.example.json
@@ -11,6 +11,7 @@
 		"maxSize": 60,//optional 图片容量的最大大小, 单位 KB, 默认 0
 		"margin": 5,//optional 合成之后, 图片间的空隙, 默认 0
 		"prefix": "sprite_",//optional 
-		"format": "png"//optional 输出的图片格式
+		"format": "png",//optional 输出的图片格式
+		"combine": false//optional 为true时将所有图片合并为一张, 同时所有css文件合并为一个文件
 	}
 }
