把依赖都打包在一起, 安装时不再从网络下载
Signed-off-by: azrael <azrael@imatlas.com>

--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
   "bin":{
     "ispriter": "./bin/ispriter"
   },
-  "dependencies": {
-    "cssom": "*",
-    "pngjs": "*",
-    "commander": "*"
-  },
-  "devDependencies": {},
-  "optionalDependencies": {}
+  "bundledDependencies": [
+    "cssom",
+    "pngjs",
+    "commander"
+  ]
 }
