--- a/examples/limit-image-size/config.json
+++ b/examples/limit-image-size/config.json
@@ -1,16 +1,15 @@
 {
-	"workspace": "../../", // 相对于当前目录, ../../ 也就是根目录
-	"input": {
-		"cssRoot": ["test/css/style.css"], //required
-		"format": "png"//optional, 只支持输出PNG格式, 如果是其他格式, 也是以PNG格式输出, 仅仅把后缀改为其他后缀
-	},
-	"output": {
-		"cssRoot": "examples/limit-image-size/css/",//required
-		"imageRoot": "../img/",//optional 相对于 cssRoot 的路径, 默认 "./image/", 最终会变成合并后的的图片路径写在css文件中
-		"maxSize": 20,//optional 图片容量的最大大小, 单位 KB, 默认 0
-		"margin": 5,//optional 合成之后, 图片间的空隙, 默认 0
-		"prefix": "sprite_",//optional 
-		"format": "png",//optional 输出的图片格式
-		"combine": false//optional 为true时将所有图片合并为一张, 同时所有css文件合并为一个文件
-	}
+    "workspace": "../../", // 相对于当前目录, ../../ 也就是根目录
+
+    "input": ["test/css/style.css"],
+    "output": {
+
+        "cssDist": "examples/multi-combine/css/",
+
+        "imageDist": "../img/",
+
+        "maxSingleSize": 20,
+
+        "margin": 5
+    }
 }
