--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 ispriter.sublime-project
 
 ispriter.sublime-workspace
+/examples/single/css
+/examples/single/img
+/examples/multi/css
+/examples/multi/img
