--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,19 @@ ispriter.sublime-workspace
 /examples/single/img
 /examples/multi/css
 /examples/multi/img
+/examples/multi-combine/css
+/examples/multi-combine/img
+/examples/multi/css
+/examples/multi/img
+
+examples/animation/img/
+
+examples/animation/css/
+
+examples/import-css/css/
+
+examples/import-css/img/
+
+examples/limit-image-size/css/
+
+examples/limit-image-size/img/
