增加忽略某个图片的支持

--- a/examples/animation/config.json
+++ b/examples/animation/config.json
@@ -1,4 +1,6 @@
 {
+    "debug": true,
+    
     "workspace": "../../", // 相对于当前目录, ../../ 也就是根目录
 
     "input": ["test/css/style2.css"],
@@ -8,6 +10,6 @@
 
         "imageDist": "../img/",
 
-        "margin": 5
+        "margin": 3
     }
 }
