简化代码调用merge的传参形式，传入要处理的css文件名数组即可

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ examples/import-css/img/
 examples/limit-image-size/css/
 
 examples/limit-image-size/img/
+
+sprite/css/img/sprite_style.png
+
+sprite/css/style.css
