增加通过配置来制定某些不合并图片的功能

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ sprite/css/style.css
 /test/sprite/css/style.css
 /test/sprite/css/style2.css
 /test/sprite/css/style3.css
+/test/sprite/css/img/sprite_style.png
