--- a/.gitignore
+++ b/.gitignore
@@ -2,36 +2,9 @@
 .DS_Store
 
 ispriter.sublime-project
-
 ispriter.sublime-workspace
-/examples/single/css
-/examples/single/img
-/examples/multi/css
-/examples/multi/img
-/examples/multi-combine/css
-/examples/multi-combine/img
-/examples/multi/css
-/examples/multi/img
 
-examples/animation/img/
+/examples/*/css
+/examples/*/img
 
-examples/animation/css/
-
-examples/import-css/css/
-
-examples/import-css/img/
-
-examples/limit-image-size/css/
-
-examples/limit-image-size/img/
-
-sprite/css/img/sprite_style.png
-
-sprite/css/style.css
-
-/test/sprite/css/img/sprite_main.png
-/test/sprite/css/main.css
-/test/sprite/css/style.css
-/test/sprite/css/style2.css
-/test/sprite/css/style3.css
-/test/sprite/css/img/sprite_style.png
+/test/sprite/
