把没有图片的css文件也拷贝到 cssDist
Signed-off-by: iazrael <azrael@imatlas.com>

--- a/examples/single/config.json
+++ b/examples/single/config.json
@@ -1,7 +1,7 @@
 {
     "workspace": "../../", // 相对于当前目录, ../../ 也就是根目录
 
-    "input": ["test/css/style.css"],
+    "input": ["test/css/style.css", "test/css/style_noimg.css"],
     "output": {
 
         "cssDist": "examples/single/css/",
