重构后基本功能合图成功
合图成功，但是还有很多细节问题，代码结构问题，功能问题需要调整

--- a/examples/background-size/config.json
+++ b/examples/background-size/config.json
@@ -5,7 +5,7 @@
 
     "input": ["test/css/style-mobile.css"],
     "output": {
-    	"combine": true,
+    	//"combine": true,
 
         "cssDist": "examples/background-size/css/",
 
