--- a/examples/background-size/config.json
+++ b/examples/background-size/config.json
@@ -3,7 +3,7 @@
     
     "workspace": "../../", // 相对于当前目录, ../../ 也就是根目录
 
-    "input": ["test/css/style-mobile.css"],
+    "input": ["test/css/style-mobile.css", "test/css/test-tmp.css"],
     "output": {
     	//"combine": true,
 
