解决缓存问题导致另外的问题，combine参数设置成功

--- a/examples/background-size/config.json
+++ b/examples/background-size/config.json
@@ -5,7 +5,7 @@
 
     "input": ["test/css/style-mobile.css", "test/css/test-tmp.css"],
     "output": {
-    	//"combine": true,
+    	"combine": false,
 
         "cssDist": "examples/background-size/css/",
 
