功能开发完成，参数配置功能验证成功，下一步：代码结构优化！！

--- a/examples/background-size/config.json
+++ b/examples/background-size/config.json
@@ -4,8 +4,11 @@
     "workspace": "../../", // 相对于当前目录, ../../ 也就是根目录
 
     "input": ["test/css/style-mobile.css", "test/css/test-tmp.css"],
+
     "output": {
     	"combine": false,
+
+    	"copyUnspriteImage": true,
 
         "cssDist": "examples/background-size/css/",
 
