文件命名方式整理了

--- a/examples/background-size/config.json
+++ b/examples/background-size/config.json
@@ -6,7 +6,7 @@
     "input": ["test/css/style-mobile.css", "test/css/test-tmp.css"],
 
     "output": {
-    	"combine": false,
+    	"combine": true,
 
         "cssDist": "examples/background-size/css/",
 
